--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
+    "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vuetify": "^3.7.16"
+    "vuetify": "^3.7.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
